; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_usb_serial.c_ucom_cnprobe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_usb_serial.c_ucom_cnprobe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.consdev = type { i32, i32 }

@ucom_cons_unit = common dso_local global i32 0, align 4
@CN_NORMAL = common dso_local global i32 0, align 4
@CN_DEAD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"ucom\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.consdev*)* @ucom_cnprobe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ucom_cnprobe(%struct.consdev* %0) #0 {
  %2 = alloca %struct.consdev*, align 8
  store %struct.consdev* %0, %struct.consdev** %2, align 8
  %3 = load i32, i32* @ucom_cons_unit, align 4
  %4 = icmp ne i32 %3, -1
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @CN_NORMAL, align 4
  %7 = load %struct.consdev*, %struct.consdev** %2, align 8
  %8 = getelementptr inbounds %struct.consdev, %struct.consdev* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @CN_DEAD, align 4
  %11 = load %struct.consdev*, %struct.consdev** %2, align 8
  %12 = getelementptr inbounds %struct.consdev, %struct.consdev* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  br label %13

13:                                               ; preds = %9, %5
  %14 = load %struct.consdev*, %struct.consdev** %2, align 8
  %15 = getelementptr inbounds %struct.consdev, %struct.consdev* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @strlcpy(i32 %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  ret void
}

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
